# plur

./: .bk.yaml  .gitignore  .gitmodules  .goreleaser.yml  .mcp.json  .mise.toml  .plur.toml  .standard.yml  .yolobox.toml  Appraisals  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  Gemfile  LICENSE  PR_SUMMARY.md  README.md  Rakefile  SUMMARY.md  benchmark_test.go  cmd_doctor.go  cmd_rails_rake.go  cmd_spec.go  cmd_spec_test.go  cmd_watch.go  cmd_watch_test.go  complexity_test.go  config-init-feedback.md  config_init.go  current-failures.txt  database_test.go  dependencies.go  discover_test.go  docker-bake.hcl  docker-compose.yml  docs-cleanup-checklist.md  dry_run_plan.go  embed_watcher_darwin_arm64.go  embed_watcher_linux_amd64.go  (+61 more)
.buildkite/: pipeline.yml
.circleci/: config.yml
.claude/: settings.json  settings.local.json
.crow/: bench.yaml  ci.yaml
autodetect/: defaults.go  defaults_test.go
benchmarks/: projects.yml
cmd/: version.go
config/: Guardfile  config.go
default-ruby/: .rux.toml
docs/: .pages  2025-06-03-spike-into-adding-watcher.md  2025-06-03-watcher-output-darwin.txt  README.md  backspin-analysis.md  backspin-filter-vs-match-research.md  backspin-io-capture-design.md  backspin-v0.10-review.md  backspin-v0.10.0-migration-notes.md  backspin-v0.9.0-migration-notes.md  backspin-vs-vcr-comparison.md  backspin.md  code-review-interactive-config.md  code_review_2025_11_29.md  configuration-test-cases.md  configuration.md  docker-integration.md  generate_pages_list.py  getting-started.md  go-vendoring-and-ci.md  golang-code-review.md  homebrew-tap-setup.md  implementation-mkdocs-migration.md  index.md  installation.md  output-contracts.md  performance-tracing.md  plur-optimization-plan.md  project-status.md  pyproject.toml  recent-pages.md  release-process.md  reorganization-plan.md  rspec-args.md  rspec-package.md  runtime-grouping-plan.md  rux-optimization-plan.md  rux-watch-multiple-watchers-plan.md  single-stream-full-migration.md  single-stream-refactor-plan.md  (+9 more)
embedded/: embedded_test.go  version.go  watcher_darwin_arm64.go  watcher_linux_amd64.go  watcher_linux_arm64.go  watcher_other.go  watcher_windows_amd64.go
examples/: command-specific-config.toml  plur.toml.example  plur.toml.frameworks  plur.toml.minitest  plur.toml.rails  plur.toml.simple
framework/: adapter_subpackages_test.go  framework.go  run_args.go  run_args_test.go  target_patterns_test.go
gemfiles/: rspec_3.13.1.gemfile  rspec_3.13.2.gemfile
job/: job.go
lib/: changelog.rb  docker_helper.rb  plur.rb  release.rb  rux_benchmark.rb  stay_gold.rb
logger/: logger.go  logger_test.go
plur/: .gitignore  .goreleaser.yml  README.md  allocation_hints.go  benchmark_test.go  cmd_doctor.go  cmd_rails.go  cmd_watch.go  command_builder.go  complexity_test.go  config.go  config_init.go  config_loader.go  database.go  database_test.go  dependencies.go  doctor.go  execution.go  glob.go  glob_bench_test.go  glob_test.go  go.mod  go.sum  grouper.go  main.go  main_test.go  parser_factory.go  race_disabled.go  race_enabled.go  rails_init.go  rails_init_test.go  result.go  result_test.go  runner.go  runner_test.go  runner_v2.go  runner_v2_test.go  runtime_tracker.go  runtime_tracker_test.go  stream_helper.go  (+9 more)
references/watcher/: CMakeLists.txt  Cargo.toml  changelog.md  flake.nix  meson.build  pyproject.toml  readme.md
references/watcher/.github/workflows/: android.yml  windows.yml
references/watcher/devel/include/detail/wtr/watcher/adapter/linux/: watch.hpp
references/watcher/devel/include/detail/wtr/watcher/adapter/linux/fanotify/: watch.hpp
references/watcher/devel/include/detail/wtr/watcher/adapter/linux/inotify/: watch.hpp
references/watcher/tool/: build
references/watcher/tool/test/: rename-events-are-assiciated-events
references/watcher/watcher-c/: libwatcher-c.version
references/watcher/watcher-nodejs/: package-lock.json  package.json
references/watcher/watcher-nodejs/tests/: watcher.test.js
references/watcher/watcher-py/watcher/: watcher.py
results/: 20250528-071115-007e27d08-example-project.json  20250528-071115-007e27d08-rux-ruby.json  20250528-071115-007e27d08-summary.json  20250528-071115-007e27d08-summary.md  20250528-082350-3993bb087-rux-ruby.json  20250528-082733-c6b6da30a-example-project.json  20250528-082733-c6b6da30a-rux-ruby.json  20250528-082733-c6b6da30a-summary.json  20250528-082733-c6b6da30a-summary.md  20250528-083910-6a0be2fa0-rux-ruby.json  20250528-083929-6a0be2fa0-example-project.json  20250528-083929-6a0be2fa0-rux-ruby.json  20250528-083929-6a0be2fa0-summary.json  20250528-083929-6a0be2fa0-summary.md  20250528-090038-b4efcc69a-example-project.json  20250528-090038-b4efcc69a-rux-ruby.json  20250528-124709-e136b36f4-rux-ruby.json  20250528-124731-e136b36f4-example-project.json  20250528-124731-e136b36f4-rux-ruby.json  20250528-124731-e136b36f4-summary.json  20250528-124731-e136b36f4-summary.md  20250528-132206-173726dad-example-project.json  20250528-132206-173726dad-rux-ruby.json  20250528-132206-173726dad-summary.json  20250528-132206-173726dad-summary.md  20250528-132348-173726dad-example-project.json  20250528-132348-173726dad-rux-ruby.json  20250528-132503-173726dad-example-project.json  20250528-132503-173726dad-rux-ruby.json  20250528-132503-173726dad-summary.json  20250528-132503-173726dad-summary.md  20250528-153953-e24485d3c-example-project.json  20250528-154140-e24485d3c-example-project.json  20250528-210657-fed0c4bbd-example-project.json  20250528-210657-fed0c4bbd-rux-ruby.json  20250528-210657-fed0c4bbd-summary.json  20250528-210657-fed0c4bbd-summary.md  20250528-211301-b9e6e98e4-example-project.json  20250528-211301-b9e6e98e4-rux-ruby.json  20250528-211301-b9e6e98e4-summary.json  (+66 more)
rspec/: formatter.rb  parser.go
rux/: .gitignore  analyze_trace.rb  cache.go  command_builder.go  config.go  database.go  database_test.go  dependencies.go  doctor.go  execution.go  file_mapper_cmd.go  formatter.go  glob.go  go.mod  go.sum  kong  (+30 more)
rux-ruby/: bench-results.json  bench-results.md  bench-streaming-results.json  bench-streaming-results.md
(+2551 files in other folders)
